--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
 
 <body>
     <div class="box">
+
         <div class="card">
             <div class="imgBox">
-                <img src="https://images.unsplash.com/photo-1557053908-4793c484d06f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMxMzk5NTF8&ixlib=rb-4.0.3&q=80&w=400"
+                <img src="https://images.unsplash.com/photo-1728515771334-5da6ec813f3c?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                     alt="some image">
             </div>
             <div class="details">
                 <h2>Rita Brown <br><span>London, UK</span></h2>
+            </div>
+        </div>
+
+
+
+        <div class="card">
+            <div class="imgBox">
+                <img src="https://images.unsplash.com/photo-1557053908-4793c484d06f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMxMzk5NTF8&ixlib=rb-4.0.3&q=80&w=400" alt="some image">
+            </div>
+            <div class="details">
+                <h2>Addi broke<br><span>Mumbai, India</span></h2>
             </div>
         </div>
 
